# photo-organizer

./: CHANGELOG.md  Dockerfile  README.md  photo-organizer.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-push.yml  python-package.yml  python-publish.yml
photo_organizer/: __init__.py  main.py
tests/: __init__.py  test_get_creation_date.py  test_list_files.py  test_main.py  test_main_integration.py  test_main_unit.py  test_organize_files.py
